plugins {
    id 'java'
    id 'com.google.cloud.tools.jib' version '2.6.0'
}

group = 'com.zx5435'
version = '0.1.0'
sourceCompatibility = '1.8'
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenLocal()
    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
    jcenter()
    maven { url "https://repository.apache.org/content/repositories/snapshots/" }
    mavenCentral()
}

ext {
    slf4jVersion = '1.7.15'
    log4jVersion = '2.12.1'
}

jib {
    from {
        image = 'openjdk:8u292-slim'
    }
    to {
        image = 'zx5435/iothub-echo'
        tags = [version.toString()]
    }
    container {
        mainClass = 'com.zx5435.iothub.echo.IotHubServer'
        jvmFlags = ['-XX:+UnlockExperimentalVMOptions', '-XX:+UseCGroupMemoryLimitForHeap', '-XX:MaxRAMPercentage=75.0']
        //        args = ['some', 'args']
        ports = ['1883']
        format = 'OCI'
        creationTime = 'USE_CURRENT_TIMESTAMP'
    }
}

dependencies {
    implementation 'io.netty:netty-all:4.1.66.Final'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'

    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
    implementation "org.slf4j:slf4j-log4j12:${slf4jVersion}"

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}
